deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-domain
  namespace: default
  labels:
    app: poc-domain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poc-domain
  template:
    metadata:
      labels:
        app: poc-domain
    spec:
      serviceAccountName: config-reader
      imagePullSecrets:
        - name: regcred
      containers:
        - name: poc-domain
          image: 192.168.99.1:8083/poc-domain
          command: ["java"]
          args: ["-Dfile.encoding=UTF-8", "-jar", "app.jar", "--spring.profiles.active=development"]
          imagePullPolicy: Always
          ports:
            - containerPort: 18080

---
apiVersion: v1
kind: Service
metadata:
  name: poc-domain
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 18080
  selector:
    app: poc-domain
  type: LoadBalancer

---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: poc-domain
#  namespace: default
#spec:
#  rules:
#    - host: localhost
#      http:
#        paths:
#          - path: /
#            backend:
#              serviceName: poc-domain
#              servicePort: 80
